[tool.poetry]
name = "gecos"
version = "1.2.0"
description = "Generated color schemes for sequence alignment visualizations"
readme = "README.rst"
license = "BSD-3-Clause"
authors = ["Patrick Kunzmann <patrick.kunzm@gmail.com>"]
homepage = "https://gecos.biotite-python.org"
repository = "https://github.com/biotite-dev/gecos"
documentation = "https://gecos.biotite-python.org"
keywords = [
    "Bioinformatics",
    "Computational biology",
    "Data visualization"
]
classifiers = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "gecos", from = "src" },
]

[tool.poetry.scripts]
gecos = "gecos.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.13"
biotite = ">= 0.21"
scikit-image = ">= 0.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0"
numpydoc = ">= 0.8"
matplotlib = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
